--- a/app/client/src/locales/es.json
+++ b/app/client/src/locales/es.json
@@ -128,5 +128,11 @@
   "Removed from playlist!": "¡Eliminado de la lista de reproducción!",
   "Playlist deleted!": "¡Lista de reproducción eliminada!",
   "Delete": "Eliminar",
-  "Are you sure you want to delete this playlist?": "¿Está seguro de querer eliminar la lista de reproducción?"
+  "Are you sure you want to delete this playlist?": "¿Está seguro de querer eliminar la lista de reproducción?",
+  "Force white tray icon": "Forzar icono blanco en la bandeja",
+  "Force default (white) tray icon if theme incorrectly detected. Requires restart.": "Forzar icono predeterminado en bandeja (blanco) si el tema no es detectado correctamente. Requiere reinicio.",
+  "Share": "Share",
+  "Settings quality": "Settings quality",
+  "Content language": "Content language",
+  "Content country": "Content country"
 }
