--- a/app/client/src/locales/pt.json
+++ b/app/client/src/locales/pt.json
@@ -6,34 +6,34 @@
   "Playlists": "Playlists",
   "Albums": "Álbuns",
   "Artists": "Artistas",
-  "More": "More",
+  "More": "Mais",
   "Settings": "Configurações",
   "Downloads": "Downloads",
-  "Search or paste Deezer URL. Use / to quickly focus.": "Procure ou cole a URL do intérprete. Use \"/\" para focar rapidamente.",
-  "Play": "Play",
+  "Search or paste Deezer URL. Use / to quickly focus.": "Procure ou cole a URL do Deezer. Use \"/\" para focar rapidamente.",
+  "Play": "Reproduzir",
   "Add to library": "Adicionar à biblioteca",
   "Download": "Download",
   "fans": "fans",
   "tracks": "faixas",
   "Quality": "Qualidade",
   "Estimated size:": "Tempo estimado:",
-  "Start downloading": "Iniciar download",
+  "Start downloading": "Começar a baixar",
   "Cancel": "Cancelar",
   "Stream logging is disabled!": "O registro de depuração extra está desativado!",
   "Enable it in settings for history to work properly.": "Habilite nas configurações para que o histórico funcione corretamente.",
   "History": "Histórico",
   "Create new playlist": "Criar nova playlist",
   "TRACKS": "FAIXAS",
-  "Sort by": "Sort by",
+  "Sort by": "Ordenar por",
   "Date Added": "Data de adição",
   "Name (A-Z)": "Nome (A-Z)",
   "Artist (A-Z)": "Artista (A-Z)",
   "Album (A-Z)": "Álbum (A-Z)",
-  "Error loading lyrics or lyrics not found!": "Erro ao carregar letras ou letras não encontradas!",
+  "Error loading lyrics or lyrics not found!": "Erro ao carregar letra ou letra não encontrada!",
   "Create playlist": "Criar playlist",
   "Create": "Criar",
   "Add to playlist": "Adicionar à playlist",
-  "Create new": "Criar novo",
+  "Create new": "Criar nova",
   "Remove": "Remover",
   "Play next": "Reproduzir à seguir",
   "Add to queue": "Adicionar à fila",
@@ -49,7 +49,7 @@
   "Play top": "Reproduzir no topo",
   "Radio": "Rádio",
   "Show all albums": "Mostrar todos os álbuns",
-  "Show all singles": "Mostrar todas as músicas",
+  "Show all singles": "Mostrar todos os singles",
   "Show more": "Mostrar mais",
   "Downloaded": "Baixados",
   "Queue": "Fila de Reprodução",
@@ -60,52 +60,52 @@
   "Clear queue": "Limpar lista",
   "Playing from": "Reproduzindo de",
   "Info": "Informações",
-  "Lyrics": "Letras",
+  "Lyrics": "Letra",
   "Track number": "Número de faixa",
   "Disk number": "Numero de disco",
-  "Explicit": "Explicito",
+  "Explicit": "Explícito",
   "Source": "Fonte",
   "ID": "Identificação",
   "Error logging in!": "Erro de login!",
   "Please try again later, or try another account.": "Por favor, tente novamente mais tarde ou tente outra conta.",
-  "Logout": "Encerrar sessão",
+  "Logout": "Desconectar",
   "Login using browser": "Login usando o navegador",
   "Please login using your Deezer account:": "Faça login usando sua conta do Deezer:",
   "...or paste your ARL/Token below:": "...ou cole seu ARL/Token abaixo:",
   "ARL/Token": "ARL/Token",
   "Login": "Login",
-  "By using this program, you disagree with Deezer's ToS.": "Ao usar este programa, você discorda do Acordo de Assinatura do Deezer.",
+  "By using this program, you disagree with Deezer's ToS.": "Ao usar este programa, você discorda dos termos e condições de uso do Deezer.",
   "Only in Electron version!": "Apenas na versão do Electron!",
   "Search results for:": "Buscar resultados para:",
-  "Error loading data!": "Error loading data!",
-  "Try again later!": "Try again later!",
-  "Search": "Search",
-  "Streaming Quality": "Streaming Quality",
-  "Download Quality": "Download Quality",
-  "Downloads Directory": "Downloads Directory",
-  "Simultaneous downloads": "Simultaneous downloads",
-  "Always show download confirm dialog before downloading.": "Always show download confirm dialog before downloading.",
-  "Show download dialog": "Show download dialog",
-  "Create folders for artists": "Create folders for artists",
-  "Create folders for albums": "Create folders for albums",
-  "Download lyrics": "Download lyrics",
-  "Variables": "Variables",
-  "UI": "UI",
-  "Show autocomplete in search": "Show autocomplete in search",
-  "Integrations": "Integrations",
-  "This allows listening history, flow and recommendations to work properly.": "This allows listening history, flow and recommendations to work properly.",
-  "Log track listens to Deezer": "Log track listens to Deezer",
-  "Connect your LastFM account to allow scrobbling.": "Connect your LastFM account to allow scrobbling.",
-  "Login with LastFM": "Login with LastFM",
-  "Disconnect LastFM": "Disconnect LastFM",
+  "Error loading data!": "Erro ao carregar dados!",
+  "Try again later!": "Tente novamente mais tarde!",
+  "Search": "Busca",
+  "Streaming Quality": "Qualidade do streaming",
+  "Download Quality": "Qualiadade do download",
+  "Downloads Directory": "Pasta de Download",
+  "Simultaneous downloads": "Downloads simultâneos",
+  "Always show download confirm dialog before downloading.": "Sempre mostrar diálogo de confirmação de download antes de baixar.",
+  "Show download dialog": "Mostrar diálogo de download",
+  "Create folders for artists": "Criar pastas para artistas",
+  "Create folders for albums": "Criar pastas para álbuns",
+  "Download lyrics": "Baixar letra",
+  "Variables": "Variáveis",
+  "UI": "IU",
+  "Show autocomplete in search": "Mostrar autocompletar na busca",
+  "Integrations": "Integrações",
+  "This allows listening history, flow and recommendations to work properly.": "Isto permite que o histórico de ouvidas, flow e recomendações funcionem corretamente.",
+  "Log track listens to Deezer": "Log de faixas ouvidas para o Deezer",
+  "Connect your LastFM account to allow scrobbling.": "Conecte sua conta do LastFM para permitir o scrobbling.",
+  "Login with LastFM": "Login com LastFM",
+  "Disconnect LastFM": "Desconectar LastFM",
   "Requires restart to apply!": "Requer reinicialização do aplicativo para aplicar!",
   "Enable Discord Rich Presence, requires restart to toggle!": "Ativar o Rich Presence do Discord, requer reiniciar para alternar!",
-  "Discord Rich Presence": "Habilitar o Discord",
+  "Discord Rich Presence": "Discord Rich Presence",
   "Enable Discord join button for syncing tracks, requires restart to toggle!": "Ativar o botão de adesão do Discord para sincronizar faixas requer reinicialização para alternar!",
   "Discord Join Button": "Botão de Entrada Discord",
-  "Other": "Outros",
+  "Other": "Outro",
   "Minimize to tray": "Minimizar para a bandeja",
-  "Don't minimize to tray": "Minimizar automaticamente para a bandeja",
+  "Don't minimize to tray": "Não minimizar para a bandeja",
   "Close on exit": "Fechar ao sair",
   "Settings saved!": "Configurações salvas!",
   "Available only in Electron version!": "Disponível apenas na versão completa!",
@@ -118,15 +118,21 @@
   "Telegram Releases": "Versões no Telegram",
   "Telegram Group": "Grupo do Telegram",
   "Discord": "Discord",
-  "Telegram Android Group": "Grupo Android do Telegram",
+  "Telegram Android Group": "Grupo do Android no Telegram",
   "Credits:": "Créditos:",
   "Agree": "Concordo",
-  "Dismiss": "Dismiss",
-  "Added to playlist!": "Added to playlist!",
-  "Added to library!": "Added to library!",
-  "Removed from library!": "Removed from library!",
-  "Removed from playlist!": "Removed from playlist!",
-  "Playlist deleted!": "Playlist deleted!",
-  "Delete": "Delete",
-  "Are you sure you want to delete this playlist?": "Are you sure you want to delete this playlist?"
+  "Dismiss": "Dispensar",
+  "Added to playlist!": "Adicionar à playlist!",
+  "Added to library!": "Adicionado à biblioteca!",
+  "Removed from library!": "Removido da biblioteca!",
+  "Removed from playlist!": "Removido da playlist!",
+  "Playlist deleted!": "Playlist deletada!",
+  "Delete": "Deletar",
+  "Are you sure you want to delete this playlist?": "Você tem certeza que deseja excluir esta playlist?",
+  "Force white tray icon": "Forçar ícone de bandeja branco",
+  "Force default (white) tray icon if theme incorrectly detected. Requires restart.": "Forçar ícone de bandeja (branco) padrão se o tema for detectado incorretamente. Requer reinicialização.",
+  "Share": "Share",
+  "Settings quality": "Settings quality",
+  "Content language": "Content language",
+  "Content country": "Content country"
 }
