--- a/app/client/src/locales/ar.json
+++ b/app/client/src/locales/ar.json
@@ -127,6 +127,12 @@
   "Removed from library!": "الإزالة من المكتبة!",
   "Removed from playlist!": "تمت الإزالة من قائمة التشغيل!",
   "Playlist deleted!": "تم حذف قائمة التشغيل!",
-  "Delete": "Delete",
-  "Are you sure you want to delete this playlist?": "Are you sure you want to delete this playlist?"
+  "Delete": "حذف",
+  "Are you sure you want to delete this playlist?": "هل أنت متأكد من أنك تريد حذف قائمة التشغيل هذه؟",
+  "Force white tray icon": "فرض أيقونة شريط المهام البيضاء",
+  "Force default (white) tray icon if theme incorrectly detected. Requires restart.": "فرض ايقونة شريط المهام (البيضاء) الافتراضية إذا تم الكشف عن الثيم بشكل غير صحيح. يتطلب إعادة التشغيل.",
+  "Share": "مشاركة",
+  "Settings quality": "جودة الإعدادات",
+  "Content language": "لغة المحتوى",
+  "Content country": "بلد المحتوى"
 }
