--- a/app/client/src/locales/de.json
+++ b/app/client/src/locales/de.json
@@ -128,5 +128,11 @@
   "Removed from playlist!": "Aus der Wiedergabeliste entfernt!",
   "Playlist deleted!": "Wiedergabeliste gelöscht!",
   "Delete": "Löschen",
-  "Are you sure you want to delete this playlist?": "Bist du sicher, dass du diese Wiedergabeliste löschen willst?"
+  "Are you sure you want to delete this playlist?": "Bist du sicher, dass du diese Wiedergabeliste löschen willst?",
+  "Force white tray icon": "Erzwinge weißes Tray-Icon",
+  "Force default (white) tray icon if theme incorrectly detected. Requires restart.": "Standardsymbol (weiß) in der Kontrollleiste erzwingen, wenn Design falsch erkannt wurde. Neustart erforderlich.",
+  "Share": "Share",
+  "Settings quality": "Settings quality",
+  "Content language": "Content language",
+  "Content country": "Content country"
 }
