--- a/app/client/src/locales/el.json
+++ b/app/client/src/locales/el.json
@@ -127,6 +127,12 @@
   "Removed from library!": "Καταργήθηκε από τη βιβλιοθήκη!",
   "Removed from playlist!": "Καταργήθηκε από τη λίστα αναπαραγωγής!",
   "Playlist deleted!": "Η λίστα αναπαραγωγής διαγράφηκε!",
-  "Delete": "Delete",
-  "Are you sure you want to delete this playlist?": "Are you sure you want to delete this playlist?"
+  "Delete": "Διαγραφή",
+  "Are you sure you want to delete this playlist?": "Είστε βέβαιοι ότι θέλετε να διαγράψετε την λίστα αναπαραγωγής;",
+  "Force white tray icon": "Εξαναγκασμός λευκού εικονιδίου",
+  "Force default (white) tray icon if theme incorrectly detected. Requires restart.": "Επαναφορά προεπιλογής (λευκού) εικονιδίου σε περίπτωση σφάλματος θέματος. Απαιτείται επανεκκίνηση.",
+  "Share": "Share",
+  "Settings quality": "Settings quality",
+  "Content language": "Content language",
+  "Content country": "Content country"
 }
