--- a/app/client/src/locales/hr.json
+++ b/app/client/src/locales/hr.json
@@ -128,5 +128,11 @@
   "Removed from playlist!": "Removed from playlist!",
   "Playlist deleted!": "Playlist deleted!",
   "Delete": "Delete",
-  "Are you sure you want to delete this playlist?": "Are you sure you want to delete this playlist?"
+  "Are you sure you want to delete this playlist?": "Are you sure you want to delete this playlist?",
+  "Force white tray icon": "Force white tray icon",
+  "Force default (white) tray icon if theme incorrectly detected. Requires restart.": "Force default (white) tray icon if theme incorrectly detected. Requires restart.",
+  "Share": "Share",
+  "Settings quality": "Settings quality",
+  "Content language": "Content language",
+  "Content country": "Content country"
 }
