--- a/app/client/src/locales/it.json
+++ b/app/client/src/locales/it.json
@@ -110,23 +110,29 @@
   "Settings saved!": "Impostazioni salvate!",
   "Available only in Electron version!": "Disponibile solo nella versione Electron!",
   "Crossfade (ms)": "Dissolvenza (ms)",
-  "Select primary color": "Select primary color",
-  "Light theme": "Light theme",
-  "Create folders for playlists": "Create folders for playlists",
+  "Select primary color": "Seleziona colore principale",
+  "Light theme": "Tema chiaro",
+  "Create folders for playlists": "Crea cartelle per le playlist",
   "About": "About",
-  "Links:": "Links:",
+  "Links:": "Link:",
   "Telegram Releases": "Telegram Releases",
-  "Telegram Group": "Telegram Group",
+  "Telegram Group": "Gruppo Telegram",
   "Discord": "Discord",
-  "Telegram Android Group": "Telegram Android Group",
-  "Credits:": "Credits:",
-  "Agree": "Agree",
-  "Dismiss": "Dismiss",
-  "Added to playlist!": "Added to playlist!",
-  "Added to library!": "Added to library!",
-  "Removed from library!": "Removed from library!",
-  "Removed from playlist!": "Removed from playlist!",
-  "Playlist deleted!": "Playlist deleted!",
-  "Delete": "Delete",
-  "Are you sure you want to delete this playlist?": "Are you sure you want to delete this playlist?"
+  "Telegram Android Group": "Gruppo Telegram Android",
+  "Credits:": "Crediti:",
+  "Agree": "Accetta",
+  "Dismiss": "Rifiuta",
+  "Added to playlist!": "Aggiunto alla playlist!",
+  "Added to library!": "Aggiunto alla libreria!",
+  "Removed from library!": "Rimosso dalla libreria!",
+  "Removed from playlist!": "Rimosso dalla playlist!",
+  "Playlist deleted!": "Playlist eliminata!",
+  "Delete": "Elimina",
+  "Are you sure you want to delete this playlist?": "Sei sicuro di voler eliminare questa playlist?",
+  "Force white tray icon": "Force white tray icon",
+  "Force default (white) tray icon if theme incorrectly detected. Requires restart.": "Force default (white) tray icon if theme incorrectly detected. Requires restart.",
+  "Share": "Share",
+  "Settings quality": "Settings quality",
+  "Content language": "Content language",
+  "Content country": "Content country"
 }
