--- a/app/client/src/locales/ru.json
+++ b/app/client/src/locales/ru.json
@@ -120,13 +120,19 @@
   "Discord": "Discord",
   "Telegram Android Group": "Обсуждение Freezer Android",
   "Credits:": "Благодарность:",
-  "Agree": "Agree",
-  "Dismiss": "Dismiss",
-  "Added to playlist!": "Added to playlist!",
-  "Added to library!": "Added to library!",
-  "Removed from library!": "Removed from library!",
-  "Removed from playlist!": "Removed from playlist!",
-  "Playlist deleted!": "Playlist deleted!",
-  "Delete": "Delete",
-  "Are you sure you want to delete this playlist?": "Are you sure you want to delete this playlist?"
+  "Agree": "Согласен",
+  "Dismiss": "Отмена",
+  "Added to playlist!": "Добавлено в плейлист!",
+  "Added to library!": "Добавлено в избранное!",
+  "Removed from library!": "Удалено из Избранного!",
+  "Removed from playlist!": "Удалено из плейлиста!",
+  "Playlist deleted!": "Плейлист удален!",
+  "Delete": "Удалить",
+  "Are you sure you want to delete this playlist?": "Вы точно хотите удалить этот плейлист?",
+  "Force white tray icon": "Белый значок в трее",
+  "Force default (white) tray icon if theme incorrectly detected. Requires restart.": "Принудительно использовать белый значок, если тема определена неправильно. Требуется перезапуск.",
+  "Share": "Share",
+  "Settings quality": "Settings quality",
+  "Content language": "Content language",
+  "Content country": "Content country"
 }
