--- a/app/client/src/locales/uk.json
+++ b/app/client/src/locales/uk.json
@@ -128,5 +128,11 @@
   "Removed from playlist!": "Видалено з плейлиста!",
   "Playlist deleted!": "Плейлист видалено!",
   "Delete": "Видалити",
-  "Are you sure you want to delete this playlist?": "Ви впевнені, що хочете видалити цей плейлист?"
+  "Are you sure you want to delete this playlist?": "Ви впевнені, що хочете видалити цей плейлист?",
+  "Force white tray icon": "Force white tray icon",
+  "Force default (white) tray icon if theme incorrectly detected. Requires restart.": "Force default (white) tray icon if theme incorrectly detected. Requires restart.",
+  "Share": "Share",
+  "Settings quality": "Settings quality",
+  "Content language": "Content language",
+  "Content country": "Content country"
 }
