--- a/app/client/src/locales/ar.json
+++ b/app/client/src/locales/ar.json
@@ -134,5 +134,8 @@
   "Share": "مشاركة",
   "Settings quality": "جودة الإعدادات",
   "Content language": "لغة المحتوى",
-  "Content country": "بلد المحتوى"
+  "Content country": "بلد المحتوى",
+  "Website": "الموقع الالكتروني",
+  "Visit website": "زيارة الموقع الإلكتروني",
+  "New update available:": "تحديث جديد متوفر:"
 }
