--- a/app/client/src/locales/fr.json
+++ b/app/client/src/locales/fr.json
@@ -2,7 +2,7 @@
   "Home": "Accueil",
   "Browse": "Explorer",
   "Library": "Bibliothèque",
-  "Tracks": "Pistes",
+  "Tracks": "Titres",
   "Playlists": "Playlists",
   "Albums": "Albums",
   "Artists": "Artistes",
@@ -14,7 +14,7 @@
   "Add to library": "Ajouter à la bibliothèque",
   "Download": "Télécharger",
   "fans": "fans",
-  "tracks": "pistes",
+  "tracks": "titres",
   "Quality": "Qualité",
   "Estimated size:": "Durée estimée:",
   "Start downloading": "Lancer le téléchargement",
@@ -23,7 +23,7 @@
   "Enable it in settings for history to work properly.": "Activez-le dans les paramètres pour que l'historique fonctionne correctement.",
   "History": "Historique",
   "Create new playlist": "Créer une nouvelle playlist",
-  "TRACKS": "PISTES",
+  "TRACKS": "TITRES",
   "Sort by": "Trier par",
   "Date Added": "Ajouté le",
   "Name (A-Z)": "Nom (A-Z)",
@@ -39,9 +39,9 @@
   "Add to queue": "Ajouter à la file d'attente",
   "Remove from library": "Supprimer de la bibliothèque",
   "Remove from playlist": "Supprimer de la playlist",
-  "Play track mix": "Jouer un mélange de pistes",
+  "Play track mix": "Jouer un mélange de titres",
   "Go to": "Aller à",
-  "Track Mix": "Mélange de piste",
+  "Track Mix": "Mélange de titres",
   "Duration": "Durée",
   "Released": "Publié",
   "Disk": "Disque",
@@ -94,14 +94,14 @@
   "Show autocomplete in search": "Afficher la saisie automatique dans la recherche",
   "Integrations": "Intégrations",
   "This allows listening history, flow and recommendations to work properly.": "Cela permet à l'historique des titres écoutés, au flow et aux recommandations de fonctionner correctement.",
-  "Log track listens to Deezer": "Journaliser la piste écoutée sur Deezer",
+  "Log track listens to Deezer": "Journaliser sur Deezer les titres écoutés",
   "Connect your LastFM account to allow scrobbling.": "Connectez votre compte LastFM pour autoriser le scrobbling.",
   "Login with LastFM": "Se connecter avec LastFM",
   "Disconnect LastFM": "Déconnecté LastFM",
   "Requires restart to apply!": "Redémarrage nécessaire pour prendre effet !",
   "Enable Discord Rich Presence, requires restart to toggle!": "Activer la présence Discord, nécessite un redémarrage pour prendre effet !",
   "Discord Rich Presence": "Présence sur Discord",
-  "Enable Discord join button for syncing tracks, requires restart to toggle!": "Activer le bouton \"rejoindre\" sur Discord pour synchroniser les pistes, nécessite un redémarrage pour prendre effet !",
+  "Enable Discord join button for syncing tracks, requires restart to toggle!": "Activer le bouton \"rejoindre\" sur Discord pour synchroniser les titres, nécessite un redémarrage pour prendre effet !",
   "Discord Join Button": "Bouton rejoindre sur Discord",
   "Other": "Autre",
   "Minimize to tray": "Réduire dans la zone de notification",
@@ -131,8 +131,11 @@
   "Are you sure you want to delete this playlist?": "Voulez-vous vraiment supprimer cette liste de lecture ?",
   "Force white tray icon": "Forcer l'icône blanche dans la zone de notification",
   "Force default (white) tray icon if theme incorrectly detected. Requires restart.": "Forcer l'icône blanche par défaut dans la zone de notification si le thème n'est pas correctement détecté. Nécessite un redémarrage.",
-  "Share": "Share",
-  "Settings quality": "Settings quality",
-  "Content language": "Content language",
-  "Content country": "Content country"
+  "Share": "Partager",
+  "Settings quality": "Qualité définie dans les paramètres",
+  "Content language": "Langue du contenu",
+  "Content country": "Pays du contenu",
+  "Website": "Site internet",
+  "Visit website": "Visiter le site internet",
+  "New update available:": "Nouvelle mise à jour disponible :"
 }
