--- a/app/client/src/locales/it.json
+++ b/app/client/src/locales/it.json
@@ -113,9 +113,9 @@
   "Select primary color": "Seleziona colore principale",
   "Light theme": "Tema chiaro",
   "Create folders for playlists": "Crea cartelle per le playlist",
-  "About": "About",
+  "About": "Informazioni",
   "Links:": "Link:",
-  "Telegram Releases": "Telegram Releases",
+  "Telegram Releases": "Rilasci su Telegram",
   "Telegram Group": "Gruppo Telegram",
   "Discord": "Discord",
   "Telegram Android Group": "Gruppo Telegram Android",
@@ -129,10 +129,13 @@
   "Playlist deleted!": "Playlist eliminata!",
   "Delete": "Elimina",
   "Are you sure you want to delete this playlist?": "Sei sicuro di voler eliminare questa playlist?",
-  "Force white tray icon": "Force white tray icon",
-  "Force default (white) tray icon if theme incorrectly detected. Requires restart.": "Force default (white) tray icon if theme incorrectly detected. Requires restart.",
-  "Share": "Share",
-  "Settings quality": "Settings quality",
-  "Content language": "Content language",
-  "Content country": "Content country"
+  "Force white tray icon": "Forza icona bianca nel vassoio",
+  "Force default (white) tray icon if theme incorrectly detected. Requires restart.": "Forza l'icona predefinita (bianca) nel vassoio se il tema è stato rilevato in modo errato. Richiede il riavvio.",
+  "Share": "Condividi",
+  "Settings quality": "Qualità delle Impostazioni",
+  "Content language": "Lingua dei contenuti",
+  "Content country": "Contenuto del Paese",
+  "Website": "Website",
+  "Visit website": "Visit website",
+  "New update available:": "New update available:"
 }
