--- a/app/client/src/locales/pt.json
+++ b/app/client/src/locales/pt.json
@@ -9,7 +9,7 @@
   "More": "Mais",
   "Settings": "Configurações",
   "Downloads": "Downloads",
-  "Search or paste Deezer URL. Use / to quickly focus.": "Procure ou cole a URL do Deezer. Use \"/\" para focar rapidamente.",
+  "Search or paste Deezer URL. Use / to quickly focus.": "Pesquise ou cole a URL do Deezer. Use \"/\" para focar rapidamente.",
   "Play": "Reproduzir",
   "Add to library": "Adicionar à biblioteca",
   "Download": "Download",
@@ -17,7 +17,7 @@
   "tracks": "faixas",
   "Quality": "Qualidade",
   "Estimated size:": "Tempo estimado:",
-  "Start downloading": "Começar a baixar",
+  "Start downloading": "Iniciar download",
   "Cancel": "Cancelar",
   "Stream logging is disabled!": "O registro de depuração extra está desativado!",
   "Enable it in settings for history to work properly.": "Habilite nas configurações para que o histórico funcione corretamente.",
@@ -56,8 +56,8 @@
   "Total": "Total",
   "Stop": "Parar",
   "Start": "Começar",
-  "Show folder": "Mostrar pastas",
-  "Clear queue": "Limpar lista",
+  "Show folder": "Mostrar pasta",
+  "Clear queue": "Limpar fila",
   "Playing from": "Reproduzindo de",
   "Info": "Informações",
   "Lyrics": "Letra",
@@ -76,10 +76,10 @@
   "Login": "Login",
   "By using this program, you disagree with Deezer's ToS.": "Ao usar este programa, você discorda dos termos e condições de uso do Deezer.",
   "Only in Electron version!": "Apenas na versão do Electron!",
-  "Search results for:": "Buscar resultados para:",
+  "Search results for:": "Resultado de pesquisa para:",
   "Error loading data!": "Erro ao carregar dados!",
   "Try again later!": "Tente novamente mais tarde!",
-  "Search": "Busca",
+  "Search": "Pesquisa",
   "Streaming Quality": "Qualidade do streaming",
   "Download Quality": "Qualiadade do download",
   "Downloads Directory": "Pasta de Download",
@@ -91,7 +91,7 @@
   "Download lyrics": "Baixar letra",
   "Variables": "Variáveis",
   "UI": "IU",
-  "Show autocomplete in search": "Mostrar autocompletar na busca",
+  "Show autocomplete in search": "Mostrar autocompletar na pesquisa",
   "Integrations": "Integrações",
   "This allows listening history, flow and recommendations to work properly.": "Isto permite que o histórico de ouvidas, flow e recomendações funcionem corretamente.",
   "Log track listens to Deezer": "Log de faixas ouvidas para o Deezer",
@@ -131,8 +131,11 @@
   "Are you sure you want to delete this playlist?": "Você tem certeza que deseja excluir esta playlist?",
   "Force white tray icon": "Forçar ícone de bandeja branco",
   "Force default (white) tray icon if theme incorrectly detected. Requires restart.": "Forçar ícone de bandeja (branco) padrão se o tema for detectado incorretamente. Requer reinicialização.",
-  "Share": "Share",
-  "Settings quality": "Settings quality",
-  "Content language": "Content language",
-  "Content country": "Content country"
+  "Share": "Compartilhar",
+  "Settings quality": "Configurações de qualidade",
+  "Content language": "Linguagem do conteúdo",
+  "Content country": "País do conteúdo",
+  "Website": "Site",
+  "Visit website": "Visite o site",
+  "New update available:": "Nova atualização disponível:"
 }
