--- a/app/client/src/locales/ro.json
+++ b/app/client/src/locales/ro.json
@@ -110,29 +110,32 @@
   "Settings saved!": "Setările au fost salvate!",
   "Available only in Electron version!": "Disponibil doar în versiunea Electron!",
   "Crossfade (ms)": "Crossfade (ms)",
-  "Select primary color": "Select primary color",
-  "Light theme": "Light theme",
-  "Create folders for playlists": "Create folders for playlists",
-  "About": "About",
-  "Links:": "Links:",
-  "Telegram Releases": "Telegram Releases",
-  "Telegram Group": "Telegram Group",
+  "Select primary color": "Selectaţi culoarea primară",
+  "Light theme": "Temă luminoasă",
+  "Create folders for playlists": "Creați foldere pentru playlist-uri",
+  "About": "Despre",
+  "Links:": "Link-uri:",
+  "Telegram Releases": "Lansări Telegram",
+  "Telegram Group": "Grup Telegram",
   "Discord": "Discord",
-  "Telegram Android Group": "Telegram Android Group",
-  "Credits:": "Credits:",
-  "Agree": "Agree",
-  "Dismiss": "Dismiss",
-  "Added to playlist!": "Added to playlist!",
-  "Added to library!": "Added to library!",
-  "Removed from library!": "Removed from library!",
-  "Removed from playlist!": "Removed from playlist!",
-  "Playlist deleted!": "Playlist deleted!",
-  "Delete": "Delete",
-  "Are you sure you want to delete this playlist?": "Are you sure you want to delete this playlist?",
-  "Force white tray icon": "Force white tray icon",
-  "Force default (white) tray icon if theme incorrectly detected. Requires restart.": "Force default (white) tray icon if theme incorrectly detected. Requires restart.",
-  "Share": "Share",
-  "Settings quality": "Settings quality",
-  "Content language": "Content language",
-  "Content country": "Content country"
+  "Telegram Android Group": "Group Android Telegram",
+  "Credits:": "Contribuţii:",
+  "Agree": "Permite",
+  "Dismiss": "Respingeți",
+  "Added to playlist!": "Adăugat la playlist!",
+  "Added to library!": "Adăugat la bibliotecă!",
+  "Removed from library!": "Eliminat din bibliotecă!",
+  "Removed from playlist!": "Eliminat din playlist!",
+  "Playlist deleted!": "Playlist detectat!",
+  "Delete": "Ștergeți",
+  "Are you sure you want to delete this playlist?": "Ești sigur că dorești să ștergi acest playlist?",
+  "Force white tray icon": "Forțează icon alb",
+  "Force default (white) tray icon if theme incorrectly detected. Requires restart.": "Forțează icon implici (alb) dacă tema este detectată incorect. Necesită repornire a aplicației.",
+  "Share": "Distribuiți",
+  "Settings quality": "Setări Calitate",
+  "Content language": "Limbajul conținutului",
+  "Content country": "Țara conținutului",
+  "Website": "Website",
+  "Visit website": "Visit website",
+  "New update available:": "New update available:"
 }
