--- a/app/client/src/locales/sk.json
+++ b/app/client/src/locales/sk.json
@@ -17,7 +17,7 @@
   "tracks": "skladieb",
   "Quality": "Kvalita",
   "Estimated size:": "Odhadovaná veľkosť:",
-  "Start downloading": "Začať sťahovať",
+  "Start downloading": "Spustiť sťahovanie",
   "Cancel": "Zrušiť",
   "Stream logging is disabled!": "Zaznamenávanie histórie pre Deezer je zakázané!",
   "Enable it in settings for history to work properly.": "Povoliť v nastaveniach pre správne fungovanie histórie.",
@@ -55,7 +55,7 @@
   "Queue": "Poradie",
   "Total": "Spolu",
   "Stop": "Stop",
-  "Start": "Štart",
+  "Start": "Spustiť sťahovanie",
   "Show folder": "Zobraziť priečinok",
   "Clear queue": "Vyčistiť poradie",
   "Playing from": "Prehráva sa",
@@ -83,7 +83,7 @@
   "Streaming Quality": "Kvalita streamu",
   "Download Quality": "Kvalita sťahovania",
   "Downloads Directory": "Priečinok sťahovania",
-  "Simultaneous downloads": "Simultánne sťahovanie",
+  "Simultaneous downloads": "Súbežné sťahovanie",
   "Always show download confirm dialog before downloading.": "Pred stiahnutím vždy zobraziť dialógové okno s potvrdením stiahnutia.",
   "Show download dialog": "Zobraziť dialógové okno sťahovania",
   "Create folders for artists": "Vytvoriť pričinky pre umelcov",
@@ -131,8 +131,11 @@
   "Are you sure you want to delete this playlist?": "Naozaj chcete odstrániť tento playlist?",
   "Force white tray icon": "Vynútiť bielu ikonu v lište",
   "Force default (white) tray icon if theme incorrectly detected. Requires restart.": "Vynútiť predvolenú (bielu) ikonu v lište, ak je motív nesprávne zistený. Vyžaduje sa reštart.",
-  "Share": "Share",
-  "Settings quality": "Settings quality",
-  "Content language": "Content language",
-  "Content country": "Content country"
+  "Share": "Zdieľať",
+  "Settings quality": "Nastavenie kvality",
+  "Content language": "Jazyk obsahu",
+  "Content country": "Krajina obsahu",
+  "Website": "Webová stránka",
+  "Visit website": "Navštíviť webovú stránku",
+  "New update available:": "Nová aktualizácia k dispozícii:"
 }
