--- a/app/client/src/locales/de.json
+++ b/app/client/src/locales/de.json
@@ -3,7 +3,7 @@
   "Browse": "Durchsuchen",
   "Library": "Mediathek",
   "Tracks": "Titel",
-  "Playlists": "Playlisten",
+  "Playlists": "Wiedergabelisten",
   "Albums": "Alben",
   "Artists": "Künstler",
   "More": "Mehr",
@@ -131,8 +131,11 @@
   "Are you sure you want to delete this playlist?": "Bist du sicher, dass du diese Wiedergabeliste löschen willst?",
   "Force white tray icon": "Erzwinge weißes Tray-Icon",
   "Force default (white) tray icon if theme incorrectly detected. Requires restart.": "Standardsymbol (weiß) in der Kontrollleiste erzwingen, wenn Design falsch erkannt wurde. Neustart erforderlich.",
-  "Share": "Share",
-  "Settings quality": "Settings quality",
-  "Content language": "Content language",
-  "Content country": "Content country"
+  "Share": "Teilen",
+  "Settings quality": "Audioqualität-Einstellungen",
+  "Content language": "Sprache des Inhalts",
+  "Content country": "Land des Inhalts",
+  "Website": "Webseite",
+  "Visit website": "Webseite besuchen",
+  "New update available:": "Neues Update verfügbar:"
 }
