--- a/app/client/src/locales/hr.json
+++ b/app/client/src/locales/hr.json
@@ -1,138 +1,141 @@
 {
-  "Home": "Home",
-  "Browse": "Browse",
-  "Library": "Library",
-  "Tracks": "Tracks",
-  "Playlists": "Playlists",
-  "Albums": "Albums",
-  "Artists": "Artists",
-  "More": "More",
-  "Settings": "Settings",
-  "Downloads": "Downloads",
-  "Search or paste Deezer URL. Use / to quickly focus.": "Search or paste Deezer URL. Use \"/\" to quickly focus.",
-  "Play": "Play",
-  "Add to library": "Add to library",
-  "Download": "Download",
-  "fans": "fans",
-  "tracks": "tracks",
-  "Quality": "Quality",
-  "Estimated size:": "Estimated size:",
-  "Start downloading": "Start downloading",
-  "Cancel": "Cancel",
-  "Stream logging is disabled!": "Stream logging is disabled!",
-  "Enable it in settings for history to work properly.": "Enable it in settings for history to work properly.",
-  "History": "History",
-  "Create new playlist": "Create new playlist",
-  "TRACKS": "TRACKS",
-  "Sort by": "Sort by",
-  "Date Added": "Date Added",
-  "Name (A-Z)": "Name (A-Z)",
-  "Artist (A-Z)": "Artist (A-Z)",
+  "Home": "Početna",
+  "Browse": "Pretraži",
+  "Library": "Biblioteka",
+  "Tracks": "Pjesme",
+  "Playlists": "Popisi za reprodukciju",
+  "Albums": "Albumi",
+  "Artists": "Izvođači",
+  "More": "Više",
+  "Settings": "Postavke",
+  "Downloads": "Preuzimanja",
+  "Search or paste Deezer URL. Use / to quickly focus.": "Pretražite ili kopirajte Deezer URL. Koristite \"/\" za brzo fokusiranje.",
+  "Play": "Reproduciraj",
+  "Add to library": "Dodaj u biblioteku",
+  "Download": "Preuzmi",
+  "fans": "obožavatelji",
+  "tracks": "pjesme",
+  "Quality": "Kvaliteta",
+  "Estimated size:": "Predviđena veličina:",
+  "Start downloading": "Započni preuzimanje",
+  "Cancel": "Poništi",
+  "Stream logging is disabled!": "Bilježenje strujanja je onemogućeno!",
+  "Enable it in settings for history to work properly.": "Uključite u postavkama kako bi povijest funkcionirala normalno.",
+  "History": "Povijest",
+  "Create new playlist": "Kreirajte novi popis za reprodukciju",
+  "TRACKS": "PJESME",
+  "Sort by": "Sortiraj po",
+  "Date Added": "Datum dodavanja",
+  "Name (A-Z)": "Naziv (A-Z)",
+  "Artist (A-Z)": "Izvođač (A-Z)",
   "Album (A-Z)": "Album (A-Z)",
-  "Error loading lyrics or lyrics not found!": "Error loading lyrics or lyrics not found!",
-  "Create playlist": "Create playlist",
-  "Create": "Create",
-  "Add to playlist": "Add to playlist",
-  "Create new": "Create new",
-  "Remove": "Remove",
-  "Play next": "Play next",
-  "Add to queue": "Add to queue",
-  "Remove from library": "Remove from library",
-  "Remove from playlist": "Remove from playlist",
-  "Play track mix": "Play track mix",
-  "Go to": "Go to",
-  "Track Mix": "Track Mix",
-  "Duration": "Duration",
-  "Released": "Released",
+  "Error loading lyrics or lyrics not found!": "Pogreška kod učitavanja tekstova pjesme ili tekstovi pjesme nisu pronađeni!",
+  "Create playlist": "Napravi popis za reprodukciju",
+  "Create": "Stvori",
+  "Add to playlist": "Dodaj u popis za reprodukciju",
+  "Create new": "Stvori novi",
+  "Remove": "Ukloni",
+  "Play next": "Reproduciraj sljedeće",
+  "Add to queue": "Dodaj u red",
+  "Remove from library": "Ukloni iz biblioteke",
+  "Remove from playlist": "Ukloni iz popisa za reprodukciju",
+  "Play track mix": "Sviraj miks pjesme",
+  "Go to": "Idi u",
+  "Track Mix": "Miks pjesme",
+  "Duration": "Trajanje",
+  "Released": "Objavljeno",
   "Disk": "Disk",
-  "albums": "albums",
-  "Play top": "Play top",
+  "albums": "albumi",
+  "Play top": "Sviraj najpopularnije",
   "Radio": "Radio",
-  "Show all albums": "Show all albums",
-  "Show all singles": "Show all singles",
-  "Show more": "Show more",
-  "Downloaded": "Downloaded",
-  "Queue": "Queue",
-  "Total": "Total",
-  "Stop": "Stop",
-  "Start": "Start",
-  "Show folder": "Show folder",
-  "Clear queue": "Clear queue",
-  "Playing from": "Playing from",
+  "Show all albums": "Prikaži sve albume",
+  "Show all singles": "Pokaži sve singlove",
+  "Show more": "Pokaži više",
+  "Downloaded": "Preuzeto",
+  "Queue": "Red",
+  "Total": "Ukupno",
+  "Stop": "Zaustavi",
+  "Start": "Započni",
+  "Show folder": "Pokaži mapu",
+  "Clear queue": "Očisti red",
+  "Playing from": "Svira iz",
   "Info": "Info",
-  "Lyrics": "Lyrics",
-  "Track number": "Track number",
-  "Disk number": "Disk number",
-  "Explicit": "Explicit",
-  "Source": "Source",
+  "Lyrics": "Tekst pjesme",
+  "Track number": "Broj pjesme",
+  "Disk number": "Broj diska",
+  "Explicit": "Eksplicitno",
+  "Source": "Izvor",
   "ID": "ID",
-  "Error logging in!": "Error logging in!",
-  "Please try again later, or try another account.": "Please try again later, or try another account.",
-  "Logout": "Logout",
-  "Login using browser": "Login using browser",
-  "Please login using your Deezer account:": "Please login using your Deezer account:",
-  "...or paste your ARL/Token below:": "...or paste your ARL/Token below:",
+  "Error logging in!": "Pogreška prilikom prijavljivanja!",
+  "Please try again later, or try another account.": "Molimo pokušajte ponovno kasnije ili pokušajte sa drugim računom.",
+  "Logout": "Odjava",
+  "Login using browser": "Prijava pomoću preglednika",
+  "Please login using your Deezer account:": "Molimo vas da se prijavite pomoću vašeg Deezer računa:",
+  "...or paste your ARL/Token below:": "...ili zalijepite svoj ARL/Token ispod:",
   "ARL/Token": "ARL/Token",
-  "Login": "Login",
-  "By using this program, you disagree with Deezer's ToS.": "By using this program, you disagree with Deezer's ToS.",
-  "Only in Electron version!": "Only in Electron version!",
-  "Search results for:": "Search results for:",
-  "Error loading data!": "Error loading data!",
-  "Try again later!": "Try again later!",
-  "Search": "Search",
-  "Streaming Quality": "Streaming Quality",
-  "Download Quality": "Download Quality",
-  "Downloads Directory": "Downloads Directory",
-  "Simultaneous downloads": "Simultaneous downloads",
-  "Always show download confirm dialog before downloading.": "Always show download confirm dialog before downloading.",
-  "Show download dialog": "Show download dialog",
-  "Create folders for artists": "Create folders for artists",
-  "Create folders for albums": "Create folders for albums",
-  "Download lyrics": "Download lyrics",
-  "Variables": "Variables",
-  "UI": "UI",
-  "Show autocomplete in search": "Show autocomplete in search",
-  "Integrations": "Integrations",
-  "This allows listening history, flow and recommendations to work properly.": "This allows listening history, flow and recommendations to work properly.",
-  "Log track listens to Deezer": "Log track listens to Deezer",
-  "Connect your LastFM account to allow scrobbling.": "Connect your LastFM account to allow scrobbling.",
-  "Login with LastFM": "Login with LastFM",
-  "Disconnect LastFM": "Disconnect LastFM",
-  "Requires restart to apply!": "Requires restart to apply!",
-  "Enable Discord Rich Presence, requires restart to toggle!": "Enable Discord Rich Presence, requires restart to toggle!",
-  "Discord Rich Presence": "Discord Rich Presence",
-  "Enable Discord join button for syncing tracks, requires restart to toggle!": "Enable Discord join button for syncing tracks, requires restart to toggle!",
-  "Discord Join Button": "Discord Join Button",
-  "Other": "Other",
-  "Minimize to tray": "Minimize to tray",
-  "Don't minimize to tray": "Don't minimize to tray",
-  "Close on exit": "Close on exit",
-  "Settings saved!": "Settings saved!",
-  "Available only in Electron version!": "Available only in Electron version!",
-  "Crossfade (ms)": "Crossfade (ms)",
-  "Select primary color": "Select primary color",
-  "Light theme": "Light theme",
-  "Create folders for playlists": "Create folders for playlists",
-  "About": "About",
-  "Links:": "Links:",
-  "Telegram Releases": "Telegram Releases",
-  "Telegram Group": "Telegram Group",
+  "Login": "Prijava",
+  "By using this program, you disagree with Deezer's ToS.": "Korištenjem ovog programa, ne prihvaćate Deezerove Uvjete pružanja usluge.",
+  "Only in Electron version!": "Samo u Electron verziji!",
+  "Search results for:": "Rezultati pretrage za:",
+  "Error loading data!": "Greška pri učitavanju podataka!",
+  "Try again later!": "Pokušajte ponovno kasnije!",
+  "Search": "Pretraga",
+  "Streaming Quality": "Kvaliteta strujanja",
+  "Download Quality": "Kvaliteta preuzimanja",
+  "Downloads Directory": "Direktorij preuzimanja",
+  "Simultaneous downloads": "Istovremena preuzimanja",
+  "Always show download confirm dialog before downloading.": "Uvijek prikaži dijaloški okvir potvrde prije preuzimanja.",
+  "Show download dialog": "Prikaži dijalog za preuzimanje",
+  "Create folders for artists": "Napravi mape za izvođače",
+  "Create folders for albums": "Naprave mape za albume",
+  "Download lyrics": "Preuzmi tekstove pjesama",
+  "Variables": "Varijable",
+  "UI": "Korisničko sučelje",
+  "Show autocomplete in search": "Pokaži samodovršavanje u pretrazi",
+  "Integrations": "Integracije",
+  "This allows listening history, flow and recommendations to work properly.": "Ovo omogućava da povijest slušanja, flow i preporuke rade ispravno.",
+  "Log track listens to Deezer": "Bilježi slušanje pjesama prema Deezeru",
+  "Connect your LastFM account to allow scrobbling.": "Spojite svoj LastFM račun da biste omogućili skroblanje.",
+  "Login with LastFM": "Prijavite se sa LastFM",
+  "Disconnect LastFM": "Odspojite LastFM",
+  "Requires restart to apply!": "Zahtjeva ponovno pokretanje da bi se primijenilo!",
+  "Enable Discord Rich Presence, requires restart to toggle!": "Omogući Obogaćeno Discord Prisustvo, zahtijeva ponovno pokretanje kako biste mogli prebaciti!",
+  "Discord Rich Presence": "Obogaćeno Discord Prisutstvo",
+  "Enable Discord join button for syncing tracks, requires restart to toggle!": "Omogući gumb Discord pridruživanje za sinkroniziranje pjesama, zahtijeva ponovno pokretanje kako biste mogli prebaciti!",
+  "Discord Join Button": "Gumb Discord pridruživanje",
+  "Other": "Ostalo",
+  "Minimize to tray": "Umanjite na alatnu traku",
+  "Don't minimize to tray": "Nemoj umanjiti na alatnu traku",
+  "Close on exit": "Zatvori na izlasku",
+  "Settings saved!": "Postavke spremljene!",
+  "Available only in Electron version!": "Dostupno samo u Electron verziji!",
+  "Crossfade (ms)": "Utišavanje/pretapanje (ms)",
+  "Select primary color": "Izaberi primarnu boju",
+  "Light theme": "Svijetla tema",
+  "Create folders for playlists": "Stvori mape za popise za reprodukciju",
+  "About": "O aplikaciji",
+  "Links:": "Poveznice:",
+  "Telegram Releases": "Telegram izdanja",
+  "Telegram Group": "Telegram grupa",
   "Discord": "Discord",
-  "Telegram Android Group": "Telegram Android Group",
-  "Credits:": "Credits:",
-  "Agree": "Agree",
-  "Dismiss": "Dismiss",
-  "Added to playlist!": "Added to playlist!",
-  "Added to library!": "Added to library!",
-  "Removed from library!": "Removed from library!",
-  "Removed from playlist!": "Removed from playlist!",
-  "Playlist deleted!": "Playlist deleted!",
-  "Delete": "Delete",
-  "Are you sure you want to delete this playlist?": "Are you sure you want to delete this playlist?",
-  "Force white tray icon": "Force white tray icon",
-  "Force default (white) tray icon if theme incorrectly detected. Requires restart.": "Force default (white) tray icon if theme incorrectly detected. Requires restart.",
-  "Share": "Share",
-  "Settings quality": "Settings quality",
-  "Content language": "Content language",
-  "Content country": "Content country"
+  "Telegram Android Group": "Telegram Android grupa",
+  "Credits:": "Zasluge:",
+  "Agree": "Slažem se",
+  "Dismiss": "Odbaci",
+  "Added to playlist!": "Dodano u popis za reprodukciju!",
+  "Added to library!": "Dodano u biblioteku!",
+  "Removed from library!": "Uklonjeno iz biblioteke!",
+  "Removed from playlist!": "Uklonjeno iz popisa za reprodukciju!",
+  "Playlist deleted!": "Popis za reprodukciju izbrisan!",
+  "Delete": "Izbriši",
+  "Are you sure you want to delete this playlist?": "Jeste li sigurni da želite izbrisati ovaj popis za reprodukciju?",
+  "Force white tray icon": "Prisili bijelu ikonu u alatnoj traci",
+  "Force default (white) tray icon if theme incorrectly detected. Requires restart.": "Prisili zadanu (bijelu) ikonu alatne trake ako je tema neispravno detektirana. Zahtijeva ponovno pokretanje.",
+  "Share": "Podijeli",
+  "Settings quality": "Postavke kvalitete",
+  "Content language": "Jezik sadržaja",
+  "Content country": "Zemlja sadržaja",
+  "Website": "Web stranica",
+  "Visit website": "Posjeti web-stranicu",
+  "New update available:": "Dostupno je novo ažuriranje:"
 }
