--- a/app/client/src/locales/hu.json
+++ b/app/client/src/locales/hu.json
@@ -134,5 +134,8 @@
   "Share": "Share",
   "Settings quality": "Settings quality",
   "Content language": "Content language",
-  "Content country": "Content country"
+  "Content country": "Content country",
+  "Website": "Website",
+  "Visit website": "Visit website",
+  "New update available:": "New update available:"
 }
