--- a/app/client/src/locales/ru.json
+++ b/app/client/src/locales/ru.json
@@ -131,8 +131,11 @@
   "Are you sure you want to delete this playlist?": "Вы точно хотите удалить этот плейлист?",
   "Force white tray icon": "Белый значок в трее",
   "Force default (white) tray icon if theme incorrectly detected. Requires restart.": "Принудительно использовать белый значок, если тема определена неправильно. Требуется перезапуск.",
-  "Share": "Share",
-  "Settings quality": "Settings quality",
-  "Content language": "Content language",
-  "Content country": "Content country"
+  "Share": "Поделиться",
+  "Settings quality": "Качество настроек",
+  "Content language": "Язык контента",
+  "Content country": "Страна контента",
+  "Website": "Website",
+  "Visit website": "Visit website",
+  "New update available:": "New update available:"
 }
