--- a/app/client/src/locales/tr.json
+++ b/app/client/src/locales/tr.json
@@ -3,7 +3,7 @@
   "Browse": "Gözat",
   "Library": "Kütüphane",
   "Tracks": "Parçalar",
-  "Playlists": "Oynatma listeleri",
+  "Playlists": "Çalma listeleri",
   "Albums": "Albümler",
   "Artists": "Sanatçılar",
   "More": "Daha Fazla",
@@ -22,7 +22,7 @@
   "Stream logging is disabled!": "Akış günlüğü devre dışı bırakıldı!",
   "Enable it in settings for history to work properly.": "Geçmişin düzgün çalışması için ayarlarda etkinleştirin.",
   "History": "Geçmiş",
-  "Create new playlist": "Yeni oynatma listesi oluştur",
+  "Create new playlist": "Yeni çalma listesi oluştur",
   "TRACKS": "PARÇALAR",
   "Sort by": "Sırala",
   "Date Added": "Eklenme Tarihi",
@@ -30,15 +30,15 @@
   "Artist (A-Z)": "Sanatçı (A-Z)",
   "Album (A-Z)": "Albüm (A-Z)",
   "Error loading lyrics or lyrics not found!": "Şarkı sözleri bulunamadı veya yüklenirken hata oluştu!",
-  "Create playlist": "Oynatma listesi oluştur",
+  "Create playlist": "Çalma listesi oluştur",
   "Create": "Oluştur",
-  "Add to playlist": "Oynatma listesine ekle",
+  "Add to playlist": "Çalma listesine ekle",
   "Create new": "Yeni oluştur",
   "Remove": "Kaldır",
   "Play next": "Sonrakini çal",
   "Add to queue": "Sıraya ekle",
   "Remove from library": "Kütüphaneden kaldır",
-  "Remove from playlist": "Oynatma listesinden kaldır",
+  "Remove from playlist": "Çalma listesinden kaldır",
   "Play track mix": "Play track mix",
   "Go to": "Git",
   "Track Mix": "Track Mix",
@@ -70,7 +70,7 @@
   "Please try again later, or try another account.": "Lütfen daha sonra tekrar deneyin veya başka bir hesap deneyin.",
   "Logout": "Çıkış",
   "Login using browser": "Tarayıcı kullanarak giriş yapın",
-  "Please login using your Deezer account:": "Lütfen Deezer hesabınızı kullanarak giriş yapın.",
+  "Please login using your Deezer account:": "Lütfen Deezer hesabınızı kullanarak giriş yapın:",
   "...or paste your ARL/Token below:": "yada ARL/Token aşağıya yapıştırın:",
   "ARL/Token": "ARL/Token",
   "Login": "Giriş",
@@ -88,13 +88,13 @@
   "Show download dialog": "İndirme iletişim kutusunu göster",
   "Create folders for artists": "Sanatçılar için klasörler oluşturun",
   "Create folders for albums": "Albümler için klasörler oluşturun",
-  "Download lyrics": ". Lrc şarkı sözlerini indir",
+  "Download lyrics": "Şarkı sözlerini indir",
   "Variables": "Değişkenler",
   "UI": "Arayüz",
   "Show autocomplete in search": "Otomatik tamamlama listesini göster",
   "Integrations": "Entegrasyonlar",
   "This allows listening history, flow and recommendations to work properly.": "Bu dinleme geçmişinin, akışının ve önerilerin düzgün çalışmasını sağlar.",
-  "Log track listens to Deezer": "Log track listens to Deezer",
+  "Log track listens to Deezer": "Dinlediyin şarkılar Deezer'da yansıtılsın",
   "Connect your LastFM account to allow scrobbling.": "Scrobbling'e izin vermek için LastFM hesabınızı bağlayın.",
   "Login with LastFM": "LastFM ile giriş yapın",
   "Disconnect LastFM": "LastFM bağlantısını kes",
@@ -104,35 +104,38 @@
   "Enable Discord join button for syncing tracks, requires restart to toggle!": "Şarkıları senkronize etmek için Discord katılma düğmesini etkinleştirin, geçiş yapmak için yeniden başlatma gerektirir!",
   "Discord Join Button": "Discord Katılma Düğmesi",
   "Other": "Diğer",
-  "Minimize to tray": "Simge durumuna küçülsün",
-  "Don't minimize to tray": "Simge durumuna küçülmesin tamamen kapansın",
+  "Minimize to tray": "Sistem tray'e küçülsün",
+  "Don't minimize to tray": "Sistem tray'e küçülmesin tamamen kapansın",
   "Close on exit": "Programı kapattığınızda",
   "Settings saved!": "Ayarlar kaydedildi!",
   "Available only in Electron version!": "Sadece Electron versiyonunda mevcuttur!",
   "Crossfade (ms)": "Crossfade (ms)",
-  "Select primary color": "Select primary color",
-  "Light theme": "Light theme",
-  "Create folders for playlists": "Create folders for playlists",
-  "About": "About",
-  "Links:": "Links:",
-  "Telegram Releases": "Telegram Releases",
-  "Telegram Group": "Telegram Group",
+  "Select primary color": "Birincil rengi seçin",
+  "Light theme": "Aydınlık tema",
+  "Create folders for playlists": "Çalma listesi için klasör oluştur",
+  "About": "Hakkında",
+  "Links:": "Bağlantılar:",
+  "Telegram Releases": "Telegram Paylaşımları",
+  "Telegram Group": "Telegram Grubu",
   "Discord": "Discord",
-  "Telegram Android Group": "Telegram Android Group",
-  "Credits:": "Credits:",
-  "Agree": "Agree",
-  "Dismiss": "Dismiss",
-  "Added to playlist!": "Added to playlist!",
-  "Added to library!": "Added to library!",
-  "Removed from library!": "Removed from library!",
-  "Removed from playlist!": "Removed from playlist!",
-  "Playlist deleted!": "Playlist deleted!",
-  "Delete": "Delete",
-  "Are you sure you want to delete this playlist?": "Are you sure you want to delete this playlist?",
-  "Force white tray icon": "Force white tray icon",
-  "Force default (white) tray icon if theme incorrectly detected. Requires restart.": "Force default (white) tray icon if theme incorrectly detected. Requires restart.",
-  "Share": "Share",
-  "Settings quality": "Settings quality",
-  "Content language": "Content language",
-  "Content country": "Content country"
+  "Telegram Android Group": "Telegram Android Grubu",
+  "Credits:": "Katkıda Bulunanlar:",
+  "Agree": "Katılıyorum",
+  "Dismiss": "Reddet",
+  "Added to playlist!": "Çalma listesine eklendi!",
+  "Added to library!": "Kütüphaneye eklendi!",
+  "Removed from library!": "Kütüphaneden silindi!",
+  "Removed from playlist!": "Çalma listesinden silindi!",
+  "Playlist deleted!": "Çalma listesi silindi!",
+  "Delete": "Sil",
+  "Are you sure you want to delete this playlist?": "Bu çalma listesini silmek istediğinizden emin misiniz?",
+  "Force white tray icon": "Sistem tray'deki beyaz ikon olmasını zorla",
+  "Force default (white) tray icon if theme incorrectly detected. Requires restart.": "Eğer tema doğru tespitlenmediyse sistem tray'deki varsayılan (beyaz) ikon olmasını zorla. Yeniden başlatma gerekli.",
+  "Share": "Paylaş",
+  "Settings quality": "Kalite ayarları",
+  "Content language": "İçerik dili",
+  "Content country": "İçerik ülkesi",
+  "Website": "Website",
+  "Visit website": "Visit website",
+  "New update available:": "New update available:"
 }
